Switched all data from local in createOrder.html to scampData in the firebase, Prevented the user from choosing invalid times, trailers, and fuels based off of the restrictions of the station, and fixed the tanks being unreadable on mobile sizes

--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -1,6 +1,6 @@
 /* popover */
 @media only screen and (max-width: 576px) {
-    .popover {
+    .popover:has(#dateTimeWidget) {
         max-width: 300px;
         background-color: rgb(250, 250, 250)
     }
@@ -11,7 +11,7 @@
 }
 
 @media only screen and (min-width: 576px) {
-    .popover {
+    .popover:has(#dateTimeWidget) {
         max-width: 576px;
         background-color: rgb(250, 250, 250)
     }
@@ -26,7 +26,7 @@
 
 }
 
-.popover-body {
+.popover-body:has(#dateTimeWidget) {
     padding: 20px; 
 }
 
@@ -54,7 +54,7 @@
 }
 
 #dateTimeWidget .calendarDay label:has(input:checked) {
-    border: solid 1px #0d6efd !important;
+    border: solid 1px #0d6efd;
     color: white;
     background-color: #0d6efd;
 }
@@ -66,12 +66,17 @@
     color: #0d6efd;
 }
 
+#dateTimeWidget .calendarDay label:has(input:disabled:checked) {
+    border: 1px solid red;
+}
+
 #dateTimeWidget #monthSelector option:disabled {
     background-color: rgb(200, 200, 200);
 }
 
 
 #dateTimeWidget #monthSelector:has(option:disabled:checked) {
+    border: 1px solid red;
     background-color: rgb(200, 200, 200);
 }
 
@@ -120,7 +125,7 @@
 }
 
 #dateTimeWidget #timeSelectorDiv label:has(input:disabled:checked) {
-    border: 1px solid #0d6efd;
+    border: 1px solid red;
     color: #0d6efd;
     background-color: rgb(200, 200, 200);
     pointer-events: none;
